--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "mongoose": "^6.0.1",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0"
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.8"
   }
 }
