--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^6.2.1",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.1",
