--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.7",
+    "axios": "^0.21.4",
     "framer-motion": "^4.1.17",
     "http-proxy-middleware": "^2.0.1",
     "nanoid": "^3.1.9",
@@ -24,6 +25,7 @@
     "react-dnd": "^14.0.1",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.1",
+    "react-query": "^3.23.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "typescript": "4.2.3",
