Added delete buttons

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-server": "node index.js",
+    "start": "node index.js",
     "dev-server": "nodemon index.js",
     "dev-client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run dev-server\" \"npm run dev-client\""
+    "dev": "concurrently \"npm run dev-server\" \"npm run dev-client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTON=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
