--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.14",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0"
   },
